优化签名工具